--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -81,12 +81,12 @@
         <div class="dropdown-content">
           <div href="#" class="dropdown-item">
           </div>
-          <a class="dropdown-item">
-            Modifiers
-          </a>
+<!--          <a class="dropdown-item">-->
+<!--            Thay đổi thông tin-->
+<!--          </a>-->
           <hr class="dropdown-divider">
           <a class="dropdown-item" (click)="logout()">
-            Logout
+            Đăng xuất
           </a>
         </div>
       </div>
