--- a/src/app/trello/board-view/board-view.component.html
+++ b/src/app/trello/board-view/board-view.component.html
@@ -36,7 +36,7 @@
               </div>
               <div>
                 <button class="button button-add-new-card is-light" (click)="showCreateCardModal(column)">
-                  + Add new card
+                  + Thêm thẻ
                 </button>
               </div>
             </div>
@@ -46,7 +46,7 @@
           <div class="board-column" style="margin-left: 0px">
             <div class="column-title">
               <button class="button button-add-new-card is-light" (click)="showCreateColumnModal()">
-                + Add new card
+                + Thêm cột
               </button>
             </div>
           </div>
@@ -60,17 +60,18 @@
     <div class="modal-card">
       <form [formGroup]="columnForm" (ngSubmit)="addColumn()">
         <header class="modal-card-head">
-          <p class="modal-card-title">Create a new list</p>
+          <p class="modal-card-title">Tạo một danh sách mới</p>
         </header>
         <section class="modal-card-body">
+          Tiêu đề:
           <input class="input add-column-input" type="text" formControlName="title" style="position: revert"
-                 placeholder="Enter title column..." maxlength="512">
+                 placeholder="Nhập tiêu đề của danh sách" maxlength="512">
         </section>
         <footer class="modal-card-foot">
           <button style="position: revert" [disabled]="columnForm.invalid" class="button is-primary is-light"
-                  type="submit">Add column
+                  type="submit">Thêm danh sách
           </button>
-          <button class="button is-light" (click)="closeCreateColumnModal()">Cancel</button>
+          <button class="button is-light" (click)="closeCreateColumnModal()">Hủy</button>
         </footer>
       </form>
     </div>
@@ -80,15 +81,15 @@
   <div class="modal-background" (click)="closeDeleteColumnModal()"></div>
   <div class="modal-card" style="width: 500px; height: 215px;">
     <header class="modal-card-head">
-      <p class="modal-card-title">Delete</p>
+      <p class="modal-card-title">Xóa danh sách</p>
       <button class="delete" aria-label="close" (click)="closeDeleteColumnModal()"></button>
     </header>
     <section class="modal-card-body">
-      Do you want to delete this Column?
+      Bạn chắc chắn muốn xóa danh sách này?
     </section>
     <footer class="modal-card-foot">
-      <button class="button is-danger is-light" (click)="deleteColumn()">Delete</button>
-      <button class="button is-light" (click)="closeDeleteColumnModal()">Cancel</button>
+      <button class="button is-danger is-light" (click)="deleteColumn()">Xóa</button>
+      <button class="button is-light" (click)="closeDeleteColumnModal()">Không</button>
     </footer>
   </div>
 </div>
@@ -97,18 +98,18 @@
     <div class="modal-card">
       <form [formGroup]="createCardForm" (ngSubmit)="createCard()">
         <header class="modal-card-head">
-          <p class="modal-card-title">Create a new card</p>
+          <p class="modal-card-title">Tạo một thẻ</p>
           Title:<input type="text" formControlName="title">
           <p class="alert" *ngIf="createCardForm.get('title')!.dirty && createCardForm.get('title')!.invalid">
             Trường bắt buộc</p>
           <h5>Tại danh sách {{selectecdColumn.title}}</h5>
         </header>
         <section class="modal-card-body">
-          Content: <input type="text" formControlName="content">
+          Nội dung: <input type="text" formControlName="content">
         </section>
         <footer class="modal-card-foot">
-          <button class="button add-new-card" type="submit">Create</button>
-          <button class="button is-light" (click)="closeCreateCardModal()">Cancel</button>
+          <button class="button add-new-card" type="submit">Tạo thẻ</button>
+          <button class="button is-light" (click)="closeCreateCardModal()">Hủy</button>
         </footer>
       </form>
     </div>
@@ -119,8 +120,8 @@
     <div class="modal-card">
       <form [formGroup]="createCardForm">
         <header class="modal-card-head">
-          <p class="modal-card-title">Edit a card</p>
-          <div>Title:<input type="text" formControlName="title"><br>
+          <p class="modal-card-title">Sửa thẻ</p>
+          <div>Tiêu đề:<input type="text" formControlName="title"><br>
             <div class="alert" *ngIf="createCardForm.get('title')!.dirty && createCardForm.get('title')!.invalid">
               Trường bắt buộc
             </div>
@@ -129,13 +130,13 @@
         </header>
         <section class="modal-card-body">
           <div>
-            Content: <input type="text" formControlName="content"><br>
+            Nội dung: <input type="text" formControlName="content"><br>
           </div>
         </section>
         <footer class="modal-card-foot">
-          <button class="button add-new-card" (click)="editCard()">Edit</button>
-          <button class="button is-light" (click)="closeEditCardModal()">Cancel</button>
-          <button class="button is-danger is-light" (click)="showDeleteCardModal()">Delete</button>
+          <button class="button add-new-card" (click)="editCard()">Sửa</button>
+          <button class="button is-light" (click)="closeEditCardModal()">Hủy</button>
+          <button class="button is-danger is-light" (click)="showDeleteCardModal()">Xóa</button>
         </footer>
       </form>
     </div>
@@ -145,15 +146,15 @@
   <div class="modal-background" (click)="closeDeleteCardModal()"></div>
   <div class="modal-card" style="width: 500px; height: 215px;">
     <header class="modal-card-head">
-      <p class="modal-card-title">Delete Card</p>
+      <p class="modal-card-title">Xóa thẻ</p>
       <button class="delete" aria-label="close" (click)="closeDeleteCardModal()"></button>
     </header>
     <section class="modal-card-body">
-      Are you sure ???
+      Bạn đã chắc chắn muốn xóa thẻ??
     </section>
     <footer class="modal-card-foot">
-      <button class="button is-danger is-light" (click)="deleteCard(selectedCard.id)">Delete</button>
-      <button class="button is-light" (click)="closeDeleteCardModal()">Cancel</button>
+      <button class="button is-danger is-light" (click)="deleteCard(selectedCard.id)">Xóa</button>
+      <button class="button is-light" (click)="closeDeleteCardModal()">Không</button>
     </footer>
   </div>
 </div>
