--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,9 @@
   <div class="form-container sign-in-container">
     <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
       <h1>Đăng Nhập</h1>
+      <br>
       <div class="form-group">
-        <input formControlName="userName" placeholder="tên đăng nhập" type="text">
+        <input formControlName="userName" placeholder="Tên đăng nhập" type="text" style="width: 300px;">
         <div *ngFor="let validation of validation_message.userName" class="text-danger">
           <div
             *ngIf="loginForm.get('userName')?.hasError(validation.type) && (loginForm.get('userName')?.touched || loginForm.get('userName')?.dirty)">
@@ -12,7 +13,7 @@
         </div>
       </div>
       <div class="form-group">
-        <input [type]="show ? 'text':'password'" formControlName="password" placeholder="mật khẩu">
+        <input [type]="show ? 'text':'password'" formControlName="password" placeholder="Mật khẩu" style="width: 300px;">
         <div *ngFor="let validation of validation_message.password" class="text-danger">
           <div
             *ngIf="loginForm.get('password')?.hasError(validation.type) && (loginForm.get('password')?.touched||loginForm.get('password')?.dirty)">
