--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -35,12 +35,12 @@
       <h1><i class="fab fa-trello logo-icon"></i>Trellot</h1>
     </div>
   </div>
-<!--  <div class="icon-item" *ngIf="currentUser">-->
-<!--    <div class="dropdown is-hoverable is-right">-->
-<!--      <div class="dropdown-trigger">-->
-<!--        <a class="icon-link"><i class="fas fa-bell"></i></a>-->
+  <div class="icon-item" *ngIf="currentUser">
+    <div class="dropdown is-hoverable is-right">
+      <div class="dropdown-trigger">
+        <a class="icon-link"><i class="fas fa-bell"></i></a>
 <!--        <span class="header__cart-notice">{{notificationService.unreadNotice}}</span>-->
-<!--      </div>-->
+      </div>
 <!--      <div class="dropdown-menu" id="dropdown-menu5" role="menu">-->
 <!--        <div class="dropdown-content" style="padding: 0">-->
 <!--          <div class="header__navbar-item header__navbar-item&#45;&#45;has-notify">-->
@@ -68,18 +68,26 @@
 <!--          </div>-->
 <!--        </div>-->
 <!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
+    </div>
+  </div>
   <div class="icon-item" *ngIf="currentUser">
     <div class="dropdown is-hoverable is-right">
+      <div class="nav-item-start">
+        <h2>{{navbarService.loggedInUser.username}}</h2>
+      </div>
       <div class="dropdown-trigger">
         <a class="icon-link" aria-haspopup="true" aria-controls="dropdown-menu4">
           <img [src]="navbarService.loggedInUser.image" class="img-circle"/>
         </a>
       </div>
-      <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+      <div class="dropdown-menu" id="dropdown-menu" role="menu">
         <div class="dropdown-content">
           <div href="#" class="dropdown-item">
+            <div class="user">
+              <div class="username">
+                Người dùng: {{navbarService.loggedInUser.username}}
+              </div>
+            </div>
           </div>
 <!--          <a class="dropdown-item">-->
 <!--            Thay đổi thông tin-->
