--- a/src/app/share/navbar/navbar.component.scss
+++ b/src/app/share/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 .icon-item {
   list-style: none;
-  color: rgba(0, 0, 0, 0.65);
+  color: white;
 }
 
 .img-circle {
@@ -29,7 +29,10 @@
 }
 
 .icon-link:hover {
-  color: #fff;
+  color: black;
+}
+h2:hover{
+  color: black;
 }
 
 .icon-link i {
@@ -68,12 +71,18 @@
 }
 
 .nav-item-start {
-  font-family: "Courgette", cursive;
+  font-family: 'Lato', sans-serif, cursive;
   font-size: 1.7rem;
   font-weight: 700;
-  color: rgba(0, 0, 0, 0.65);
+  color: white
 }
-
+.dropdown-content {
+  opacity: 80%;
+  border-radius: 4px;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+}
 
 .nav {
   background: rgba(#6d7fcc, 0.5);
@@ -118,7 +127,9 @@
   margin: 0;
   height: 40px;
 }
-
+h2{
+  color: white;
+}
 h1.app-name {
   padding: 4px;
 }
