--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -3,14 +3,14 @@
   </div>
   <ul class="list-group">
     <li class="list-group-item">
-      <a [routerLink]="['']">Home</a></li>
+      <a [routerLink]="['']">Trang chủ</a></li>
     <li>
       <div class="collapse">
-        <a [routerLink]="['/boards']">Board</a>
+        <a [routerLink]="['/boards']">Bảng</a>
       </div>
     </li>
     <li class="list-group-item">
-      <a [routerLink]="['']">Group</a></li>
+      <a [routerLink]="['']">Nhóm</a></li>
 <!--    <li class="list-group-item">A fourth item</li>-->
 <!--    <li class="list-group-item">And a fifth one</li>-->
   </ul>
