--- a/src/app/trello/board-view/board-view.component.scss
+++ b/src/app/trello/board-view/board-view.component.scss
@@ -410,9 +410,15 @@ h1.app-name {
 .span-upload-file-card:hover {
   border: 1.5px solid #AAAAAA;
 }
-//.modal-card {
-//  margin-left: auto;
-//  margin-top: 250px;
-//}
+
+.modal-card-foot {
+  align-items: center;
+  background-color: whitesmoke;
+  display: flex;
+  justify-content: right;
+  padding: 20px;
+  position: relative;
+}
+
 
 
