--- a/src/app/trello/boards/boards.component.html
+++ b/src/app/trello/boards/boards.component.html
@@ -11,12 +11,11 @@
           <a (click)="displayAddBoardModal()"><i class="fas fa-plus-circle"></i></a>
         </div>
       </div>
-      <div class="card" *ngFor="let board of boards" routerLink="/trello/boards/{{board.id}}">
+      <div class="card" *ngFor="let board of boards" routerLink="/board/{{board.id}}">
         <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
         <div class="card-content">
           <div class="content">
-            <span style="font-size: small"><b>Type: </b>{{board.type}}</span> <br>
-            <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
+            <span style="font-size: small"><b>Chủ sở hữu: </b>{{board.owner.username}}</span>
           </div>
         </div>
       </div>
@@ -30,8 +29,7 @@
         <div class="card-header"><p class="card-header-title">D</p></div>
         <div class="card-content">
           <div class="content">
-            <span style="font-size: small"><b>Id: </b>E</span> <br>
-            <span style="font-size: small"><b>Owner: </b>F</span>
+            <span style="font-size: small"><b>Chủ sở hữu: </b>F</span>
           </div>
         </div>
       </div>
@@ -41,12 +39,11 @@
       <h1><i class="far fa-clipboard"></i>Bảng công khai</h1>
     </div>
     <div class="section-board">
-      <div class="card" *ngFor="let board of publicBoards" routerLink="/trello/boards/{{board.id}}">
+      <div class="card" *ngFor="let board of publicBoards" routerLink="/board/{{board.id}}">
         <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
         <div class="card-content">
           <div class="content">
-            <span style="font-size: small"><b>Type: </b>{{board.type}}</span> <br>
-            <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
+            <span style="font-size: small"><b>Chủ sở hữu: </b>{{board.owner.username}}</span>
           </div>
         </div>
       </div>
@@ -55,12 +52,11 @@
       <h1><i class="far fa-clipboard"></i>Bảng riêng tư</h1>
     </div>
     <div class="section-board">
-      <div class="card" *ngFor="let board of privateBoards" routerLink="/trello/boards/{{board.id}}">
+      <div class="card" *ngFor="let board of privateBoards" routerLink="/board/{{board.id}}">
         <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
         <div class="card-content">
           <div class="content">
-            <span style="font-size: small"><b>Type: </b>{{board.type}}</span> <br>
-            <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
+            <span style="font-size: small"><b>Chủ sở hữu: </b>{{board.owner.username}}</span>
           </div>
         </div>
       </div>
@@ -71,46 +67,36 @@
   <div class="modal-background" (click)="hideCreateBoard()"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">Tạo bảng mới</p>
+      <p class="modal-card-title">Tạo một bảng</p>
       <button class="delete" aria-label="close" (click)="hideCreateBoard()"></button>
     </header>
     <section class="modal-card-body">
-      <div class="field columns" style="position: relative">
-        <label class="label">Tiêu đề</label>
-        <div class="control">
-          <input class="input" type="text" required [(ngModel)]="newBoard.title" #boardTitle="ngModel">
-        </div>
-        <div *ngIf="boardTitle.invalid && boardTitle.touched" class="alert">
-          <div *ngIf="boardTitle.errors?.required">Tiêu đề cần được nhập.</div>
-        </div>
+      <label class="label">Tiêu đề</label>
+      <input class="input" type="text" required [(ngModel)]="newBoard.title" #boardTitle="ngModel">
+      <div *ngIf="boardTitle.invalid && boardTitle.touched" class="alert">
+        <div *ngIf="boardTitle.errors?.required">Tiêu đề cần được nhập.</div>
+      </div>
+      <label class="label">Loại</label>
+      <div class="control">
+        <select class="input" [(ngModel)]="newBoard.type">
+          <option value="Private">Riêng tư</option>
+          <option value="Public">Công khai</option>
+        </select>
       </div>
       <br>
-      <div class="field columns">
-        <label class="label">Loại</label>
-        <div class="control">
-          <select class="select" [(ngModel)]="newBoard.type">
-            <option value="Private">Riêng tư</option>
-            <option value="Public">Công khai</option>
-          </select>
-        </div>
-      </div>
-      <div class="field columns">
-        <div class="column is-one-fifth">
-          <label class="label">Người tạo</label>
-          <div class="control">
-            <div class="button is-info user-button is-light">{{loggedInUser.username}}</div>
-          </div>
-        </div>
+      <div class="control">
+        <label class="label">Người tạo: <span
+          class="is-info user-button is-light">{{loggedInUser.username}}</span></label>
       </div>
     </section>
     <footer class="modal-card-foot">
-      <div *ngIf="boardTitle.invalid" class="alert">
-        <button class="button is-dark is-light" disabled>Tạo bảng</button>
+      <div *ngIf="boardTitle.invalid" class=" is-right">
+        <button class="button is-dark is-light is-right" disabled>Tạo</button>
       </div>
-      <div *ngIf="!boardTitle.invalid" class="alert">
-        <button class="button is-success is-light" (click)="createNewBoard()">Tạo bảng</button>
+      <div *ngIf="!boardTitle.invalid" class=" is-right">
+        <button class="button is-dark is-light is-right" (click)="createNewBoard()">Tạo</button>
       </div>
-      <button class="button is-light" (click)="hideCreateBoard()">Hủy</button>
+      <button class="button is-light is-right" (click)="hideCreateBoard()">Hủy</button>
     </footer>
   </div>
 </div>
