--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -80,8 +80,16 @@
       <div class="dropdown-menu" id="dropdown-menu4" role="menu">
         <div class="dropdown-content">
           <div href="#" class="dropdown-item">
+            <div class="user">
+              <div class="username">
+                {{navbarService.loggedInUser.username}}
+              </div>
+              <span class="nickname">
+                {{navbarService.loggedInUser.nickname}}
+              </span>
+            </div>
           </div>
-          <a class="dropdown-item">
+          <a class="dropdown-item" (click)="openModalUpdate()">
             Modifiers
           </a>
           <hr class="dropdown-divider">
@@ -95,45 +103,45 @@
 </div>
 
 <!--Modal update user-->
-<!--<div class="modal modal-update-user" id="modal-update-user">-->
-<!--  <div class="modal-background" (click)="closeModalUpdate()"></div>-->
-<!--  <div class="modal-card modal-card-user" id="updateForm">-->
-<!--    <div class="login-card">-->
-<!--      <header class="modal-card-head">-->
-<!--        <p class="modal-card-title">Information</p>-->
-<!--        <button class="delete" aria-label="close" (click)="closeModalUpdate()"></button>-->
-<!--      </header>-->
-<!--      <td class="update-image"><img class="img-user" [src]="imgSrc" (click)="preview.click()"></td>-->
-<!--      <div class="content">-->
-<!--        <form #updateForm="ngForm" (ngSubmit)="updateUserInfo()">-->
-<!--          <div class="update-info">-->
-<!--            &lt;!&ndash;upload file&ndash;&gt;-->
-<!--            <div class="file">-->
-<!--              <label class="file-label">-->
-<!--                <input class="file-input" type="file" #preview (change)="showPreview($event)">-->
-<!--                <span class="file-cta">-->
-<!--                  <span class="file-icon">-->
-<!--                    <i class="fas fa-upload"></i>-->
-<!--                  </span>-->
-<!--                  <span class="file-label">-->
-<!--                    Choose a file…-->
-<!--                  </span>-->
-<!--                </span>-->
-<!--              </label>-->
-<!--            </div>-->
-<!--            &lt;!&ndash;            user name&ndash;&gt;-->
-<!--            <input type="text" class="input input-user-name" name="nickname" #nickname="ngModel" required-->
-<!--                   [(ngModel)]="user.nickname" placeholder="Nick name">-->
-<!--            <td *ngIf="updateForm.invalid && updateForm.touched && isSubmitted">-->
-<!--              <p class="notification" *ngIf="nickname.errors?.required">Can not blank</p>-->
-<!--            </td>-->
-<!--          </div>-->
-<!--          <div class="div-update">-->
-<!--            <button class="button is-success is-light button-update">Update</button>-->
-<!--            <button class="button is-danger is-light button-cancel" (click)="closeModalUpdate()" type="button">Cancel</button>-->
-<!--          </div>-->
-<!--        </form>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="modal modal-update-user" id="modal-update-user">
+  <div class="modal-background" (click)="closeModalUpdate()"></div>
+  <div class="modal-card modal-card-user" id="updateForm">
+    <div class="login-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Information</p>
+        <button class="delete" aria-label="close" (click)="closeModalUpdate()"></button>
+      </header>
+      <td class="update-image"><img class="img-user" [src]="imgSrc" (click)="preview.click()"></td>
+      <div class="content">
+        <form #updateForm="ngForm" (ngSubmit)="updateUserInfo()">
+          <div class="update-info">
+            <!--upload file-->
+            <div class="file">
+              <label class="file-label">
+                <input class="file-input" type="file" #preview (change)="showPreview($event)">
+                <span class="file-cta">
+                  <span class="file-icon">
+                    <i class="fas fa-upload"></i>
+                  </span>
+                  <span class="file-label">
+                    Choose a file…
+                  </span>
+                </span>
+              </label>
+            </div>
+            <!--            user name-->
+            <input type="text" class="input input-user-name" name="nickname" #nickname="ngModel" required
+                   [(ngModel)]="user.nickname" placeholder="Nick name">
+            <td *ngIf="updateForm.invalid && updateForm.touched && isSubmitted">
+              <p class="notification" *ngIf="nickname.errors?.required">Can not blank</p>
+            </td>
+          </div>
+          <div class="div-update">
+            <button class="button is-success is-light button-update">Update</button>
+            <button class="button is-danger is-light button-cancel" (click)="closeModalUpdate()" type="button">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
