update Tag for card, add and remove attachment

--- a/src/app/share/navbar/navbar.component.scss
+++ b/src/app/share/navbar/navbar.component.scss
@@ -34,7 +34,11 @@
 h2:hover{
   color: black;
 }
-
+.small-button{
+  height: 35px;
+  width: 100px;
+  margin-top: 5px
+}
 .icon-link i {
   margin: auto;
 }
