--- a/src/app/trello/board-view/board-view.component.html
+++ b/src/app/trello/board-view/board-view.component.html
@@ -200,7 +200,7 @@
                *ngFor="let attachment of pendingAttachment, index as i">
             <span class="media link-file">
               <a target="_blank" href="{{attachment.source}}">{{attachment.name}}</a>
-              <a (click)="deletePending(i)">
+              <a (click)="deletePendingAttachment(i)">
               <span class="tag is-danger" style="margin-left: 20px">
                 <i class="far fa-trash-alt"></i></span>
             </a>
