--- a/src/app/share/navbar-board-header/navbar-board-header.component.html
+++ b/src/app/share/navbar-board-header/navbar-board-header.component.html
@@ -1,29 +1,28 @@
-<!--&lt;!&ndash;board-header&ndash;&gt;-->
-<!--<nav class="navbar" role="navigation" aria-label="main navigation">-->
-<!--  <div class="navbar-brand">-->
+<!--board-header-->
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
 
-<!--    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">-->
-<!--      <span aria-hidden="true"></span>-->
-<!--      <span aria-hidden="true"></span>-->
-<!--      <span aria-hidden="true"></span>-->
-<!--    </a>-->
-<!--  </div>-->
-
-<!--  <div id="navbarBasicExample" class="navbar-menu">-->
-<!--    <div class="navbar-item">-->
-<!--      <div class="buttons">-->
-<!--        <input *ngIf="canEdit" [(ngModel)]="board.title" class="button is-primary" (change)="updateBoardTitle()">-->
-<!--        <button *ngIf="!canEdit" class="button is-primary">-->
-<!--          {{board.title}}-->
-<!--        </button>-->
-<!--        <button class="button is-primary">-->
-<!--          <img *ngIf="!board.owner.image" src="https://i.pinimg.com/originals/57/fb/31/57fb3190d0cc1726d782c4e25e8561e9.png" class="img-circle is-48x48"/>-->
-<!--          <img *ngIf="board.owner.image" [src]="board.owner.image" class="img-circle is-48x48"/>-->
-<!--          {{board.owner.username}}-->
-<!--        </button>-->
-<!--        <button class="button is-primary">-->
-<!--          <i class="far fa-star"></i>-->
-<!--        </button>-->
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-item">
+      <div class="buttons">
+        <input *ngIf="canEdit" [(ngModel)]="currentBoard.title" class="button is-primary" (change)="updateBoardTitle()">
+        <button *ngIf="!canEdit" class="button is-primary">
+          {{currentBoard.title}}
+        </button>
+        <button class="button is-primary">
+          <img *ngIf="!currentBoard.owner.image" src="https://i.pinimg.com/originals/57/fb/31/57fb3190d0cc1726d782c4e25e8561e9.png" class="img-circle is-48x48"/>
+          <img *ngIf="currentBoard.owner.image" [src]="currentBoard.owner.image" class="img-circle is-48x48"/>
+          {{currentBoard.owner.username}}
+        </button>
+        <button class="button is-primary">
+          <i class="far fa-star"></i>
+        </button>
 
 <!--        <div>-->
 <!--          <span *ngFor="let member of members; index as i">-->
@@ -47,8 +46,8 @@
 <!--          </span>-->
 <!--        </div>-->
 
-<!--      </div>-->
-<!--    </div>-->
+      </div>
+    </div>
 <!--    <div class="navbar-end">-->
 <!--      <div class="navbar-item">-->
 <!--        <div class="buttons">-->
@@ -153,9 +152,9 @@
 <!--        </div>-->
 <!--      </div>-->
 <!--    </div>-->
-<!--  </div>-->
-<!--</nav>-->
-<!--&lt;!&ndash;User details modal&ndash;&gt;-->
+  </div>
+</nav>
+<!--User details modal-->
 <!--<div class="modal" id="user-detail-modal">-->
 <!--  <div class="modal-background"></div>-->
 <!--  <div class="modal-card">-->
@@ -212,7 +211,7 @@
 <!--    </footer>-->
 <!--  </div>-->
 <!--</div>-->
-<!--&lt;!&ndash;delete board modal&ndash;&gt;-->
+<!--delete board modal-->
 <!--<div class="modal" id="delete-board-modal">-->
 <!--  <div class="modal-background"></div>-->
 <!--  <div class="modal-card">-->
