--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+html, body {
+  height: auto;
+}
 
 html{
   background-image: linear-gradient(to top, #fff1eb 0%, #6d7fcc 100%);
