--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,16 @@
 @import url(https://fonts.googleapis.com/css?family=Courgette);
 @import "../node_modules/bulma/bulma.sass";
 
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  height: 100%;
 }
 
-html, body {
+
+html{
+  background-image: linear-gradient(to right, #fff1eb 0%, #6d7fcc 100%);
   height: auto;
 }
 
-html{
-  background-image: linear-gradient(to top, #fff1eb 0%, #6d7fcc 100%);
-}
