--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -24,7 +24,7 @@ body {
   align-items: center;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
-  height: 100vh;
+  height: 100%;
   margin: -20px 0 50px;
 }
 
