--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
 
 
 html{
-  background-image: linear-gradient(to right, #fff1eb 0%, #6d7fcc 100%);
+  background-image: linear-gradient(to left, #fff1eb 0%, #6d7fcc 100%);
   height: auto;
 }
 
