--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,19 +1,3 @@
-.example-container .mat-form-field + .mat-form-field {
-  margin-left: 8px;
-}
-
-.example-right-align {
-  text-align: right;
-}
-
-input.example-right-align::-webkit-outer-spin-button,
-input.example-right-align::-webkit-inner-spin-button {
-  display: none;
-}
-
-input.example-right-align {
-  -moz-appearance: textfield;
-}
 * {
   box-sizing: border-box;
 }
@@ -24,7 +8,7 @@ body {
   align-items: center;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
-  height: 100%;
+  height: 100vh;
   margin: -20px 0 50px;
 }
 
