--- a/src/app/share/footer/footer.component.html
+++ b/src/app/share/footer/footer.component.html
@@ -1,58 +1,34 @@
-<footer class="bg-dark text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4" style="text-align: center">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-      ><i class="fab fa-facebook-f"></i
-      ></a>
+<!--<div class="columns">-->
+<!--  <div class="column is-4">-->
+<!--    <h4 class="bd-footer-title">-->
+<!--      <strong xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Trello</strong> by <a href="" property="cc:attributionName" rel="cc:attributionURL" target="_blank">Trello Hope Team</a>.-->
+<!--    </h4>-->
 
-      <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-      ><i class="fab fa-twitter"></i
-      ></a>
+<!--    <div class="bd-footer-iframe">-->
+<!--      <a>C0221H1</a>-->
+<!--    </div>-->
 
-      <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-      ><i class="fab fa-google"></i
-      ></a>
+<!--    <div class="bd-footer-tsp">-->
+<!--      CodeGym@2021.-->
+<!--    </div>-->
 
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-      ><i class="fab fa-instagram"></i
-      ></a>
+<!--  </div>-->
+<!--  <div class="column is-4">-->
+<!--    <h4 class="bd-footer-title">-->
+<!--      <strong>Contribute</strong> on GitHub-->
+<!--    </h4>-->
 
-      <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-      ><i class="fab fa-linkedin-in"></i
-      ></a>
+<!--  </div>-->
+<!--  <div class="column is-4">-->
+<!--    <h4 class="bd-footer-title">-->
+<!--      <strong>Share</strong> on social media-->
+<!--    </h4>-->
 
-      <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-      ><i class="fab fa-github"></i
-      ></a>
-    </section>
-    <section class="mb-4">
-      <p style="text-align: center">
-        Đây là sản phẩm dự án Trello thuộc nhóm H3K-CodeGym</p>
-    </section>
-    <!-- Section: Text -->
+<!--    <div class="bd-footer-iframe">-->
+<!--      <a href="" class="twitter-share-button" data-text="Bulma: Free, open source, and modern CSS framework based on Flexbox" data-url="https://bulma.io" data-count="horizontal" data-via="jgthms" data-related="jgthms:Creator of Bulma" data-size="large">Tweet</a>-->
 
-    <!-- Section: Links -->
-    <section class="">
-      <!--Grid row-->
-      <!--Grid row-->
-    </section>
-    <!-- Section: Links -->
-  </div>
-  <!-- Grid container -->
+<!--      <div class="fb-like" data-href="" data-layout="button" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>-->
+<!--    </div>-->
 
-  <!-- Copyright -->
-  <div class="text-center p-3" style="text-align: center">
-    © 2021 Copyright:
-    <a class="text-white" href="https://codegym.vn/" target="_blank">H3K-CodeGym</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-<!-- Footer -->
+<!--  </div>-->
+<!--</div>-->
