--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
@@ -30,12 +30,12 @@ p {
 }
 
 span {
-  font-size: 16px;
+  font-size: 12px;
 }
 
 a {
   color: #333;
-  font-size: 16px;
+  font-size: 14px;
   text-decoration: none;
   margin: 15px 0;
 }
@@ -45,7 +45,7 @@ button {
   border: 1px solid #FF4B2B;
   background-color: #FF4B2B;
   color: #FFFFFF;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
   padding: 12px 45px;
   letter-spacing: 1px;
@@ -81,7 +81,7 @@ input {
   background-color: #eee;
   border: none;
   padding: 12px 15px;
-  margin: 8px;
+  margin: 8px 0;
   width: 100%;
 }
 
@@ -94,7 +94,7 @@ input {
   overflow: hidden;
   width: 768px;
   max-width: 100%;
-  min-height: 600px;
+  min-height: 800px;
   margin-top: 50px
 }
 
