--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Lato:400,800,900');
 @import url(https://fonts.googleapis.com/css?family=Courgette);
 @import "../node_modules/bulma/bulma.sass";
-
+html, body {
+  height: 100%;
+}
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  height: 100%;
 }
 
-
-html{
-  background-image: linear-gradient(to left, #fff1eb 0%, #6d7fcc 100%);
+html, body {
   height: auto;
 }
 
+html{
+  background-image: linear-gradient(to top, #fff1eb 0%, #6d7fcc 100%);
+}
