--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
           </button>
         </div>
         <br>
-        <a routerLink="/recoverpassword" target="_blank">Quên mật khẩu ?</a>
+        <a routerLink="/recoverpassword">Quên mật khẩu ?</a>
       </div>
     </form>
   </div>
