--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="form-container sign-in-container">
     <form (ngSubmit)="register()" [formGroup]="registerForm" style="width: 400px;">
-      <h1>Đăng Ký</h1>
+      <h1 style="padding-bottom: 30px ; font-size: 25px">Đăng Ký</h1>
       <br>
       <div class="form-group" style="width: 300px;">
         <input type="text" formControlName="username" placeholder="Tài Khoản" (click)="existence()"/>
