--- a/src/app/recover-password/recover-password.component.html
+++ b/src/app/recover-password/recover-password.component.html
@@ -1,7 +1,7 @@
 <div class="container" id="container">
   <div class="form-container sign-in-container">
     <form *ngIf="!divNewPassword" [formGroup]="conFirmForm" (ngSubmit)="confirm()">
-      <h1>Quên mật khẩu ?</h1>
+      <h1 style="padding-bottom: 30px ; font-size: 25px">Quên mật khẩu ?</h1>
       <input type="text" formControlName="username" placeholder="Nhập tên tài khoản của bạn" />
       <div *ngIf="this.conFirmForm.get('username')?.errors?.required" class="col alert alert-danger">
         <p style="color: crimson ; margin-bottom: 0px;margin-top: 0px;">Tên tài khoản phải đc nhập !</p>
