--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<nav id="sidebar">
+<nav id="sidebar" style="font-size: 20px">
   <div class="sidebar-header">
   </div>
   <ul class="list-group">
@@ -10,7 +10,7 @@
       </div>
     </li>
     <li class="list-group-item">
-      <a [routerLink]="['']">Nhóm</a></li>
+      <p [routerLink]="['']">Nhóm <span (click)="showCreateWorkspaceModal()"><i class="fas fa-plus-circle is-hoverable"></i></span></p></li>
 <!--    <li class="list-group-item">A fourth item</li>-->
 <!--    <li class="list-group-item">And a fifth one</li>-->
   </ul>
