--- a/src/app/trello/home/home.component.html
+++ b/src/app/trello/home/home.component.html
@@ -42,14 +42,15 @@
     <div class="section-board">
       <div class="card">
         <div class="img-circle-add-board">
-          <a><i class="fas fa-plus-circle"></i></a>
+          <a (click)="showCreateWorkspaceModal()"><i class="fas fa-plus-circle"></i></a>
         </div>
       </div>
-      <div>
-        <div class="card">
-          <div class="card-header"><p class="card-header-title">A</p></div>
+      <div *ngFor="let localWorkspace of workspaces">
+        <div class="card" *ngIf="localWorkspace.owner.id == loggedInUser.id">
+          <div class="card-header"><p class="card-header-title">{{localWorkspace.title}}</p></div>
           <div class="card-content">
-            <span style="font-size: small"><b>Chủ sở hữu: </b>R</span>
+            <span style="font-size: small"><b>Chủ sở hữu: </b>{{localWorkspace.owner.username}}</span><br>
+            <span style="font-size: small"><b>Loại nhóm: </b>{{localWorkspace.type}}</span>
           </div>
         </div>
       </div>
@@ -59,11 +60,12 @@
       <h1><i class="fas fa-briefcase"></i>Nhóm được chia sẻ với bạn</h1>
     </div>
     <div class="section-board">
-      <div>
-        <div class="card">
-          <div class="card-header"><p class="card-header-title">T</p></div>
+      <div *ngFor="let workspace of workspaces">
+        <div class="card" routerLink="/trello/workspaces/{{workspace.id}}" *ngIf="workspace.owner.id != loggedInUser.id">
+          <div class="card-header"><p class="card-header-title">{{workspace.title}}</p></div>
           <div class="card-content">
-            <span style="font-size: small"><b>Chủ sở hữu: </b>D</span>
+            <span style="font-size: small"><b>Id: </b>{{workspace.id}}</span> <br>
+            <span style="font-size: small"><b>Owner: </b>{{workspace.owner.username}}</span>
           </div>
         </div>
       </div>
@@ -83,7 +85,7 @@
       <label class="label">Tiêu đề</label>
       <input class="input" type="text" required [(ngModel)]="newBoard.title" #boardTitle="ngModel">
       <div *ngIf="boardTitle.invalid && boardTitle.touched" class="alert">
-        <div *ngIf="boardTitle.errors?.required">Tiêu đề cần được nhập.</div>
+        <div *ngIf="boardTitle.errors?.required" style="color: red;">Tiêu đề cần được nhập.</div>
       </div>
       <label class="label">Loại</label>
       <div class="control">
@@ -99,13 +101,59 @@
       </div>
     </section>
     <footer class="modal-card-foot">
-      <div *ngIf="boardTitle.invalid" class=" is-right">
-        <button class="button is-dark is-light is-right" disabled>Tạo</button>
-      </div>
-      <div *ngIf="!boardTitle.invalid" class=" is-right">
-        <button class="button is-dark is-light is-right" (click)="createNewBoard()">Tạo</button>
+      <div class=" is-right">
+        <button [disabled]="boardTitle.invalid" class="button is-dark is-right" (click)="createNewBoard()">Tạo</button>
       </div>
       <button class="button is-light is-right" (click)="hideCreateBoard()">Hủy</button>
+    </footer>
+  </div>
+</div>
+
+<div class="modal" id="create-workspace">
+  <div class="modal-background" (click)="hideCreateWorkspaceModal()"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Tạo một nhóm mới</p>
+      <button class="delete" aria-label="close" (click)="hideCreateWorkspaceModal()"></button>
+    </header>
+    <section class="modal-card-body">
+      <div class="field" style="position: relative">
+        <label class="label">Title</label>
+        <div class="control">
+          <input class="input" type="text" required [(ngModel)]="workspace.title" #workspaceTitle="ngModel">
+        </div>
+        <label class="label">Phân loại nhóm:</label>
+        <div class="control">
+          <select class="input" [(ngModel)]="workspace.type" required #workspaceType="ngModel">
+            <option value="IT">IT</option>
+            <option value="Accountant">Kế toán</option>
+            <option value="HR">Nhân sự</option>
+            <option value="Other">Khác</option>
+          </select>
+        </div>
+        <label class="label">Quyền hạn</label>
+        <div class="control">
+          <select class="input" [(ngModel)]="workspace.privacy" required #workspacePrivacy="ngModel">
+            <option value="Private">Riêng tư</option>
+            <option value="Public">Công khai</option>
+          </select>
+        </div>
+        <div *ngIf="workspaceTitle.invalid && workspaceTitle.touched" class="alert">
+          <div *ngIf="workspaceTitle.errors?.required" style="color: red">
+            Hãy nhập tiêu đề
+          </div>
+        </div>
+      </div>
+      <div class="control">
+        <label class="label">Người tạo: <span
+          class="is-info user-button is-light">{{loggedInUser.username}}</span></label>
+      </div>
+    </section>
+    <footer class="modal-card-foot">
+      <div class="alert">
+        <button [disabled]="workspaceTitle.invalid || workspaceType.invalid || workspacePrivacy.invalid" class="button is-dark" (click)="createWorkspace()">Tạo</button>
+      </div>
+      <button class="button is-light" (click)="hideCreateWorkspaceModal()">Hủy</button>
     </footer>
   </div>
 </div>
