--- a/src/app/trello/home/home.component.html
+++ b/src/app/trello/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="main-content columns is-fullheight" xmlns="http://www.w3.org/1999/html">
-  <app-side-bar></app-side-bar>
+  <app-side-bar [workspaces]="workspaces"></app-side-bar>
   <div class="container column is-10" #top style="padding: 10px 13px 13px 106px;">
     <!--    Board-->
     <div class="title-board">
