--- a/src/app/trello/boards/boards.component.html
+++ b/src/app/trello/boards/boards.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <app-side-bar></app-side-bar>
+  <app-side-bar [workspaces]="workspaces"></app-side-bar>
   <div class="container column is-10" #top style="padding: 10px 13px 13px 106px;">
     <!--    Board-->
     <div class="title-board">
