--- a/src/app/trello/workspace/workspacemembers/workspace-members.component.html
+++ b/src/app/trello/workspace/workspacemembers/workspace-members.component.html
@@ -1,1 +1,103 @@
-<p>workspacemembers works!</p>
+<section class="main-content columns is-fullheight" style="margin-top: 40px">
+  <app-side-bar [workspaces]="workspaces"></app-side-bar>
+  <div class="container column is-10">
+    <div class="navbar-end" *ngIf="allowEdit || loggedInUser.id == workspace.owner?.id">
+      <div class="navbar-item">
+        <div class="buttons" style="margin-right: 200px">
+          <div class="dropdown is-active">
+            <div class="dropdown-trigger">
+              <input #searchUser class="input is-link" type="text" placeholder="Invite user"
+                     (change)="findAllUserByUsername(searchUser.value)">
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu" role="menu" *ngIf="searchUser.value">
+              <div class="dropdown-content">
+                <div *ngFor="let user of userSearchResult" class="dropdown-item" (click)="selectUser(searchUser, user)">
+              <span *ngIf="workspace.owner.id != user.id">
+              @{{user.username}}({{user.nickname}})
+            </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="button is-primary" (click)="addMemberToWorkspace()" style="width: 100px">
+            <i class="fas fa-user-plus"></i>
+            Invite
+          </button>
+          <div class="dropdown is-active">
+            <div class="dropdown-menu" role="menu" *ngIf="pendingAddMember.length !=0" style="top: -24px">
+              <div class="dropdown-content">
+            <span *ngFor="let user of pendingAddMember" class="dropdown-item user-invite"
+                  (click)="removePendingUser(pendingAddMember.indexOf(user))">
+              @{{user.username}}({{user.nickname}})
+            </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="title-board">
+      <input #searchMember class="input is-link" type="text" placeholder="Find Member"
+             (keyup)="searchMembers(searchMember.value)">
+    </div>
+    <div class="user-container">
+      <div class="user-info">
+        <div>
+          <img class="user-img" src="{{workspaceOwner.image}}">
+        </div>
+        <div class="user-name">
+          <h2 class="user-nickname">{{workspaceOwner.nickname}}</h2>
+          <h6 class="user-username">@{{workspaceOwner.username}}</h6>
+        </div>
+      </div>
+      <div>
+        <button class="button is-primary">
+          Owner
+        </button>
+      </div>
+    </div>
+    <div class="user-container" *ngFor="let member of memberInWorkspace; index as i"
+         [class.background-current-user]="loggedInUser.id == member.user?.id">
+      <div class="user-info">
+        <div>
+          <img class="user-img" src="{{member.user?.image}}">
+        </div>
+        <div class="user-name">
+          <h2 class="user-nickname">{{member.user?.nickname}}</h2>
+          <h6 class="user-username">@{{member.user?.username}}</h6>
+        </div>
+      </div>
+      <div>
+        <button class="button is-primary">
+          {{member.role}}
+        </button>
+<!--        <button class="button is-primary" style="width: 40px" (click)="removeMembers(i)"-->
+<!--                *ngIf="workspace.owner.id == currentUser.id">-->
+<!--          <i class="fas fa-user-minus" style="color: red"></i>-->
+<!--        </button>-->
+<!--        <button class="button is-primary" style="width: 40px" (click)="removeMembers(i)"-->
+<!--                *ngIf="member.user?.id == currentUser.id && member.role != 'Admin'">-->
+<!--          <i class="fas fa-user-minus" style="color: red"></i>-->
+<!--        </button>-->
+        <button class="button is-primary" style="width: 40px" (click)="removeMembers(i)"
+                *ngIf="allowEdit">
+          <i class="fas fa-user-minus" style="color: red"></i>
+        </button>
+
+        <button class="button is-success" style="top: 10px" (click)="updateMember(member,'Admin')"
+                *ngIf="allowEdit && member.role !== 'Admin'">Set Admin
+        </button>
+        <button class="button is-success" style="top: 10px" (click)="updateMember(member,'Member')"
+                *ngIf="allowEdit && member.role == 'Admin' && loggedInUser.id != member.user?.id">Set Member
+        </button>
+<!--        <button class="button is-success" style="top: 10px" (click)="updateMember(member,'Admin')"-->
+<!--                *ngIf="workspace.owner.id == currentUser.id && member.role !== 'Admin'">Set Admin-->
+<!--        </button>-->
+<!--        <button class="button is-success" style="top: 10px" (click)="updateMember(member,'Member')"-->
+<!--                *ngIf="workspace.owner.id == currentUser.id && member.role == 'Admin'">Set Member-->
+<!--        </button>-->
+      </div>
+    </div>
+  </div>
+</section>
