--- a/src/app/share/navbar-board-header/navbar-board-header.component.html
+++ b/src/app/share/navbar-board-header/navbar-board-header.component.html
@@ -116,7 +116,7 @@
               </div>
             </div>
           </div>
-          <div class="search-bar" style="right: 1220px;">
+          <div class="search-bar">
             <div *ngIf="searchBarIsShown" class="search-bar-input">
               <input class="input" type="text" placeholder="Tìm kiếm thành viên" [(ngModel)]="userSearch"
                      (keyup)="searchUsers()">
